tests/cases/smoke/invalid/error_throws_unknown_type.dp
func read_file(path: str) -> str throws MissingError {
    return "ok"
}
